Enter시 작동하도록 설정, ios숫자키패드로 설정

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <div class="context">
       <h1>0 ~ 100사이의 수를 입력하세요</h1>
-      <input type="number" name="input1" id="input1" placeholder="0">
+      <input type="number" name="input1" id="input1" placeholder="0" pattern="\d*">
       <p></p>
       <button id="butt1">도전</button>
       <button id="butt2">초기화</button>
